Fixed captcha alignment on registration form

--- a/server/public/stylesheets/sass/cloud.rh.scss
+++ b/server/public/stylesheets/sass/cloud.rh.scss
@@ -1001,6 +1001,11 @@ label {
   @include form_label;
 }
 
+#captcha label {
+  width: 165px;
+  margin-right: -8px;
+}
+
 .recaptcha_input_area label {
 	line-height: inherit;
 }
